# kasts

./: .craft.ini  .editorconfig  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  kasts  org.kde.alligator.appdata.xml  org.kde.alligator.desktop  org.kde.kasts.appdata.xml  org.kde.kasts.desktop  org.kde.mobile.alligator.appdata.xml  org.kde.mobile.alligator.desktop  snapcraft.yaml
src/: CMakeLists.txt  Messages.sh  about.cpp  about.h  alligator-debug.h  alligatorsettings.kcfg  alligatorsettings.kcfgc  androidlogging.h  audiomanager.cpp  audiomanager.h  author.cpp  author.h  chapter.cpp  chapter.h  database.cpp  database.h  datamanager.cpp  datamanager.h  datatypes.cpp  datatypes.h  downloadmodel.cpp  downloadmodel.h  downloadprogressmodel.cpp  downloadprogressmodel.h  enclosure.cpp  enclosure.h  enclosuredownloadjob.cpp  enclosuredownloadjob.h  entriesmodel.cpp  entriesmodel.h  entry.cpp  entry.h  entryListModel.cpp  entryListModel.h  episodemodel.cpp  episodemodel.h  error.cpp  error.h  errorlogmodel.cpp  errorlogmodel.h  (+40 more)
src/android/: androidcoverimageprovider.cpp  androidcoverimageprovider.h  androidfilelisting.cpp  androidfilelisting.h  androidmusiclistener.cpp  androidmusiclistener.h  androidplayer.cpp  androidplayer.h  androidplayerjni.cpp  androidplayerjni.h  mediasessionclient.cpp  mediasessionclient.h
src/contents/ui/: EntryListPage.qml  EntryPage.qml  FeedListPage.qml  SettingsPage.qml  main.qml
src/dbus-interfaces/: org.freedesktop.NetworkManager.xml  org.freedesktop.PowerManagement.Inhibit.xml  org.gnome.SessionManager.xml
src/kmediasession/: CMakeLists.txt  androidlogging.h  config-kmediasession.h.in  kmediasession.cpp  kmediasession.h  metadata.cpp  metadata.h  types.h
src/kmediasession/.patches/: vlc-ignore-time-for-cache.patch  vlc-taglib-2.patch
src/kmediasession/android/: AndroidManifest.xml  CMakeLists.txt  KMediaSession-android-dependencies.xml  build.gradle
src/kmediasession/cmake/: FindLIBVLC.cmake
src/kmediasession/dbus-interfaces/: org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
src/kmediasession/example-app/: CMakeLists.txt  main.cpp  resources.qrc
src/kmediasession/mediabackends/: abstractmediabackend.h  gstmediabackend.cpp  gstmediabackend.h  mpvmediabackend.cpp  mpvmediabackend.h  mpvmediabackend_p.h  qtmediabackend.cpp  qtmediabackend.h  vlcmediabackend.cpp  vlcmediabackend.h
src/kmediasession/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
src/kmediasession/powermanagement/: powermanagementinterface.cpp  powermanagementinterface.h
src/kmediasession/qml/: CMakeLists.txt  kmediasession-qmlplugin.cpp  qmldir  qmldir.license
src/models/: abstractepisodemodel.cpp  abstractepisodemodel.h  abstractepisodeproxymodel.cpp  abstractepisodeproxymodel.h  chaptermodel.cpp  chaptermodel.h  downloadmodel.cpp  downloadmodel.h  entriesmodel.cpp  entriesmodel.h  entriesproxymodel.cpp  entriesproxymodel.h  episodemodel.cpp  episodemodel.h  episodeproxymodel.cpp  episodeproxymodel.h  errorlogmodel.cpp  errorlogmodel.h  feedsmodel.cpp  feedsmodel.h  feedsproxymodel.cpp  feedsproxymodel.h  podcastsearchmodel.cpp  podcastsearchmodel.h  queuemodel.cpp  queuemodel.h  queueproxymodel.cpp  queueproxymodel.h
src/mpris2/: mediaplayer2.cpp  mediaplayer2.h  mediaplayer2player.cpp  mediaplayer2player.h  mpris2.cpp  mpris2.h
src/qml/: AboutPage.qml  AddFeedSheet.qml  BottomToolbar.qml  ChapterListDelegate.qml  ChapterSlider.qml  ConnectionCheckAction.qml  DiscoverPage.qml  DownloadListPage.qml  DownloadSwipePage.qml  EntryListDelegate.qml  EntryListHeader.qml  EntryListPage.qml  EntryPage.qml  EpisodeListPage.qml  EpisodeSwipePage.qml  ErrorList.qml  ErrorListOverlay.qml  ErrorListPage.qml  ErrorNotification.qml  FeedDetailsPage.qml  FeedImage.qml  FeedListDelegate.qml  FeedListGridView.qml  FeedListPage.qml  FilterInlineMessage.qml  FooterBar.qml  FullScreenImage.qml  GenericEntryDelegate.qml  GenericEntryListView.qml  GenericHeader.qml  GenericListHeader.qml  GlobalSearchField.qml  HeaderBar.qml  HoverLinkIndicator.qml  ImageWithFallback.qml  KastsGlobalDrawer.qml  Main.qml  MinimizedPlayerControls.qml  Playback.qml  PlaybackRateCustomizerDialog.qml  (+14 more)
src/qml/Desktop/: DesktopPlayerControls.qml  HeaderBar.qml
src/qml/Mobile/: BottomToolbar.qml  FooterBar.qml  MinimizedPlayerControls.qml  MobilePlayerControls.qml
src/qml/Settings/: AboutPage.qml  AppearanceSettingsPage.qml  ErrorListPage.qml  GeneralSettingsPage.qml  NetworkSettingsPage.qml  SettingsPage.qml  SettingsView.qml  StorageDirDialog.qml  StorageDirDialogFlatpak.qml  StorageSettingsPage.qml  SynchronizationSettingsPage.qml
src/solidextras/: CMakeLists.txt  config-solid-extras.h.in  networkstatus.h  networkstatus_dbus.cpp
src/solidextras/android/: CMakeLists.txt  KastsSolidExtras-android-dependencies.xml  build.gradle
src/solidextras/qml/: CMakeLists.txt  qmldir  solidextrasqmlplugin.cpp
src/sync/: sync.cpp  sync.h  syncjob.cpp  syncjob.h  syncutils.cpp  syncutils.h
src/sync/gpodder/: devicerequest.cpp  devicerequest.h  episodeactionrequest.cpp  episodeactionrequest.h  genericrequest.cpp  genericrequest.h  gpodder.cpp  gpodder.h  loginrequest.cpp  loginrequest.h  logoutrequest.cpp  logoutrequest.h  subscriptionrequest.cpp  subscriptionrequest.h  syncrequest.cpp  syncrequest.h  updatedevicerequest.cpp  updatedevicerequest.h  updatesyncrequest.cpp  updatesyncrequest.h  uploadepisodeactionrequest.cpp  uploadepisodeactionrequest.h  uploadsubscriptionrequest.cpp  uploadsubscriptionrequest.h
src/utils/: colorschemer.cpp  colorschemer.h  enclosuredownloadjob.cpp  enclosuredownloadjob.h  enclosuredownloadmanager.cpp  enclosuredownloadmanager.h  fetchfeedsjob.cpp  fetchfeedsjob.h  networkaccessmanager.cpp  networkaccessmanager.h  networkconnectionmanager.cpp  networkconnectionmanager.h  storagemanager.cpp  storagemanager.h  storagemovejob.cpp  systrayicon.cpp  systrayicon.h  updatefeedjob.cpp  updatefeedjob.h  utils.cpp  utils.h  windowutils.cpp  windowutils.h
(+64 files in other folders)
